[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/userInerface/InGameUI/EquipmentSlot.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/montreal/Montreal-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/itemSprites/equipItems/500004.png" type="Texture" id=3]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/inventorySlots2.png-4cbb87fbbc2dec6546d12e511ff98330.stex"

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 2 )

[node name="0" type="CenterContainer"]
margin_right = 60.0
margin_bottom = 60.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = SubResource( 1 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="."]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "face"
align = 1

[node name="Icon" type="TextureRect" parent="."]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="gui_input" from="." to="." method="_on_0_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_0_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_0_mouse_exited"]
